--- a/model/GNATprove-MERCE/src/TODO.txt
+++ b/model/GNATprove-MERCE/src/TODO.txt
@@ -1,10 +1,11 @@
-== [2013 Edition] Test Contract_Cases on transition function ==
+== [X] [2013 Edition] Test Contract_Cases on transition function ==
 
   function transition (mode : etcs_mode_t) return etcs_mode_t with
     Contract_Cases => (condition_transition_SB_to_SH => True,
                        condition_transition_SB_to_FS => True,
                        condition_transition_SB_to_IS => True);
 
+ Tested: triggers an internal error.
 
 == [2013 Edition] Test pure function with contract ==
 
