--- a/model/GNATprove-MERCE/src/TODO.txt
+++ b/model/GNATprove-MERCE/src/TODO.txt
@@ -7,7 +7,7 @@
 
  Tested: triggers an internal error.
 
-== [2013 Edition] Test pure function with contract ==
+== [X] [2013 Edition] Test pure function with contract ==
 
    -- Pure function that breaks GNAT GPL 2012
      function m_per_s_From_km_per_h_bis(Speed: Speed_km_per_h_t) return Speed_t
@@ -16,7 +16,9 @@
      with
        Pre => Is_Valid_Speed_km_per_h(Speed);
 
-== [2013 Edition] Test Dimension_System aspect on Units.ads ==
+ Tested: works with SPARK Hi-LIte GPL 2013.
+
+== [ ] [2013 Edition] Test Dimension_System aspect on Units.ads ==
 
   http://www.adacore.com/adaanswers/gems/gem-136-how-tall-is-a-kilogram/
 
