integration of assessor comments on documentation

--- a/model/Event_B_Systerel/Section_3_13/latex/subset_3_13.tex
+++ b/model/Event_B_Systerel/Section_3_13/latex/subset_3_13.tex
@@ -127,8 +127,8 @@ status indication for the driver.
 The Event-B modeling starts with machines describing the dataflow of all inputs,
 outputs and intermediate values of the model. For example, the values that are
 calculated for \bvar{T\_brake\_service} in \bmachine{Traction / Braking Models}
-are written into a variable by an event that calculates then and these values
-and are read as input by the event that calculates \bvar{T\_bs} for \bvar{SBI}
+are written into a variable by an event that calculates them and these values
+are then read as input by the event that calculates \bvar{T\_bs} for \bvar{SBI}
 limit.
 
 This approach is conducted for each intermediate value of the system until a
@@ -423,7 +423,7 @@ and only removes the unneeded ones.
 
 \begin{figure}[ht]
   \centering
-  \includegraphics[width=.75\textwidth]{Decomp-Overview}
+  \includegraphics[width=.9\textwidth]{Decomp-Overview}
   \caption{Decomposition Configuration}
   \label{fig:decomp-overview}
 \end{figure}
