added information about team-based development plugin to Rodin description

--- a/model/Event_B_Systerel/rodin-projects-github/rodin-projects-github.tex
+++ b/model/Event_B_Systerel/rodin-projects-github/rodin-projects-github.tex
@@ -246,6 +246,18 @@ machines, the extension relation between the contexts and the sees relation
 between machines and contexts. It is available from the Rodin repository under
 ``Event-B Project Diagram Plugin''.
 
+\paragraph{Team-Based Development}
+\label{sec:team-based-devel}
+
+The team-based development
+plugin\footnote{\url{http://wiki.event-b.org/index.php/Team-based_development}}
+allows an EMF-compare comparison of Event-B models. Each context and each
+machine is stored in a separate XML file. Although text-based, XML files are not
+easily readable which makes merging of different versions difficult in a
+collaborative version control environment. This plugin allows for the
+presentation of differences between two versions on the model level, which
+facilitates cooperation of several people on the same model.
+
 \section{Importing Rodin Projects from github}
 \label{sec:import-rodin-proj}
 
